2003-01-16  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file-operations.c (nautilus_file_operations_new_folder):
	Convert new directory name with g_filename_from_utf8(). (#90154)
	
2003-01-16  Alexander Larsson  <alexl@redhat.com>


	* nautilus-file-management-properties.desktop.in:
	* src/network-scheme.desktop.in:
	Change the icon to something that exists.

2003-01-14  Dave Camp  <dave@ximian.com>

	* libnautilus-private/nautilus-view-identifier.c:
	(nautilus_view_identifier_new), (nautilus_view_identifier_copy),
	(nautilus_view_identifier_new_from_bonobo_server_info),
	(nautilus_view_identifier_free):
	* libnautilus-private/nautilus-view-identifier.h: Add a 
	view_as_label_with_mnemonic field to the server file and 
	NautilusViewIdentifier.
	* src/nautilus-window.c: (add_view_as_bonobo_menu_item): Use
	the mnemonics in the view menu.
	* src/Nautilus_shell.server.in: Add view_as_label_with_mnemonic
	fields to the Icon and List views.

2003-01-14  David Bordoley <bordoley@msu.edu>
 
 	* src/nautilus-view-frame.c
 	Fixed typo in nautilus_view_frame_class_init 
 	s/open_location_in_this_window/open_location_prefer_existing_window 
 	for the prefer existing window case.

2003-01-14  Anders Carlsson  <andersca@codefactory.se>

	* src/file-manager/fm-icon-view.c:
	(get_stored_icon_position_callback),
	(icon_position_changed_callback):
	Store the value of the previous locale, not the C
	one that we're setting. 
	Fixes #45300, reported by Christian Rose. 

=== nautilus 2.1.91 ===

2003-01-13  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Update to 2.1.91.
	Require eel 2.1.91.

2003-01-13  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-directory-background.c:
	Rename nautilus_file_update_desktop_pixmaps to 
	nautilus_file_update_root_pixmaps for clarity.
	Call eel_background_set_is_constant_size on the desktop
	background earlier.
	Set the color on the correct window (root window, not desktop window).