@@ -1,3 +1,10 @@
+2003-01-17  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-file-operations.c:
+	Convert link names and duplicate names with
+	g_filename_to/from_utf8(). (#103721)
+	Patch from hidetoshi.tajima@sun.com
+
 2003-01-16  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-file-operations.c (nautilus_file_operations_new_folder):
